# tired

./: .gitignore  Cargo.toml  README.md  README.pt-BR.md
crates/hale-cli/: Cargo.toml
crates/hale-cli/src/: main.rs
crates/hale-compiler/: Cargo.toml
crates/hale-compiler/src/: check.rs  cost.rs  ir.rs  lib.rs  lower.rs  nplus1.rs  optimize.rs  types.rs
crates/hale-lsp/: Cargo.toml
crates/hale-lsp/src/: lib.rs
crates/hale-py/: Cargo.toml  README.md  pyproject.toml
crates/hale-py/python/: example.py
crates/hale-py/src/: lib.rs
crates/hale-runtime/: Cargo.toml
crates/hale-runtime/src/: config.rs  contracts.rs  eval.rs  exec.rs  http.rs  infer.rs  lib.rs  mock.rs  record.rs  schema.rs  server.rs  value.rs
crates/hale-runtime/tests/: integration.rs
crates/hale-syntax/: Cargo.toml
crates/hale-syntax/src/: ast.rs  diag.rs  lexer.rs  lib.rs  parser.rs  pretty.rs  token.rs
crates/tired-cli/: Cargo.toml
crates/tired-cli/src/: main.rs
crates/tired-compiler/: Cargo.toml
crates/tired-compiler/src/: check.rs  cost.rs  ir.rs  lib.rs  lower.rs  optimize.rs  types.rs
crates/tired-lsp/: Cargo.toml
crates/tired-lsp/src/: lib.rs
crates/tired-py/: Cargo.toml  README.md  pyproject.toml
crates/tired-py/python/: example.py
crates/tired-py/src/: lib.rs
crates/tired-runtime/: Cargo.toml
crates/tired-runtime/src/: config.rs  contracts.rs  eval.rs  exec.rs  http.rs  infer.rs  lib.rs  mock.rs  record.rs  schema.rs  server.rs  value.rs
crates/tired-runtime/tests/: integration.rs
crates/tired-syntax/: Cargo.toml
crates/tired-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  pretty.rs  span.rs  token.rs
docs/: DESIGN.md  LANGUAGE.md  grammar.ebnf
editors/vscode/: README.md  extension.js  language-configuration.json  package-lock.json  package.json
editors/vscode/syntaxes/: hale.tmLanguage.json  tired.tmLanguage.json
examples/: batch.hale  broken.hale  broken.tired  error_handling.hale  error_handling.tired  gateway.hale  gateway.tired  github_dashboard.hale  github_dashboard.tired  governance.hale  loop_fusion.hale  mocked.hale  mocked.tired  mutations.hale  mutations.tired  nplus1.hale  parallel.hale  parallel.tired  pipeline.hale  pipeline.tired  sla.hale
