[workspace]
resolver = "2"
members = [
    "crates/hale-syntax",
    "crates/hale-compiler",
    "crates/hale-runtime",
    "crates/hale-lsp",
    "crates/hale-cli",
    "crates/hale-py",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["Gabriel Lima"]
repository = "https://github.com/Tech-GabrielLima/tired"
description = "hale — a compiled domain-specific language for consuming HTTP APIs"

[workspace.dependencies]
hale-syntax = { path = "crates/hale-syntax" }
hale-compiler = { path = "crates/hale-compiler" }
hale-runtime = { path = "crates/hale-runtime" }
hale-lsp = { path = "crates/hale-lsp" }

# Runtime-only third-party deps. The compiler front-end (syntax + compiler crates)
# is deliberately dependency-free std-only Rust; only the runtime touches the network.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2", "gzip"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
