[package]
name = "hale-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The `hale` command-line driver: run, check, fmt, test, explain"

[[bin]]
name = "hale"
path = "src/main.rs"

[dependencies]
hale-syntax.workspace = true
hale-compiler.workspace = true
hale-runtime.workspace = true
hale-lsp.workspace = true
tokio.workspace = true
serde_json.workspace = true

[lints.clippy]
all = "warn"
