[package]
name = "hale-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "hale semantic analysis, type system, IR and optimizer (zero dependencies)"

[dependencies]
hale-syntax.workspace = true

[lints.clippy]
all = "warn"
