[package]
name = "hale-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "hale runtime: dependency-graph executor, HTTP engine, cache and in-language mocks"

[dependencies]
hale-syntax.workspace = true
hale-compiler.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true

[dev-dependencies]
hale-syntax.workspace = true
hale-compiler.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints.clippy]
all = "warn"
