[package]
name = "tired-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TIRED semantic analysis, type system, IR and optimizer (zero dependencies)"

[dependencies]
tired-syntax.workspace = true

[lints.clippy]
all = "warn"
