[package]
name = "tired-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Language Server for TIRED: live diagnostics, completion and hover over the LSP"

[dependencies]
tired-syntax.workspace = true
tired-compiler.workspace = true
serde_json.workspace = true

[lints.clippy]
all = "warn"
