[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "tired"
version = "0.1.0"
description = "Python bindings for TIRED — a compiled DSL for consuming HTTP APIs (Rust core)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Gabriel Lima" }]
keywords = ["http", "api", "dsl", "compiler", "rust"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
]

[tool.maturin]
# The cdylib's [lib] name is `tired`, so the import name is `tired`.
features = ["pyo3/extension-module"]
