[package]
name = "tired-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TIRED runtime: dependency-graph executor, HTTP engine, cache and in-language mocks"

[dependencies]
tired-syntax.workspace = true
tired-compiler.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true

[dev-dependencies]
tired-syntax.workspace = true
tired-compiler.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints.clippy]
all = "warn"
